--- a/labs/unit_02/express/starter-code-hbs/views/todos/index.hbs
+++ b/labs/unit_02/express/starter-code-hbs/views/todos/index.hbs
@@ -1,7 +1,8 @@
-<h1> Todos </h1>
+<h1> you have {{todos.length}} todos </h1>
+<a href="/todos">Create a new todo</a>
 <ul>
   {{#each todos}}
-    <li>Description: {{description}}</li>
+    <li>Description:<a href="/todos/{{@index}}"> {{description}}</a></li>
     <li>Urgent: {{urgent}}</li>
     <br>
   {{/each}}
