--- a/labs/unit_02/express/starter-code-hbs/views/todos/index.hbs
+++ b/labs/unit_02/express/starter-code-hbs/views/todos/index.hbs
@@ -4,6 +4,8 @@
   {{#each todos}}
     <li>Description:<a href="/todos/{{@index}}"> {{description}}</a></li>
     <li>Urgent: {{urgent}}</li>
+    <form method='POST' action='/todos/{{@index}}?_method=DELETE'>
+    <button>DELETE</button>
     <br>
   {{/each}}
 </ul>
